2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        (mime_db_changed_callback):
	Use the right call to invalidate attributes, so that
	they get re-read correctly.

2007-10-02  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
        (mime_type_data_changed_callback):
        * libnautilus-private/nautilus-directory-async.c:
        (mime_db_changed_callback):
	Fix up types in callbacks
	
        * libnautilus-private/nautilus-mime-application-chooser.c:
        * libnautilus-private/nautilus-open-with-dialog.c:
	Handle and emit mime_data_changed on NautilusSignaller

2007-10-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-mime-application-chooser.[ch]:
        * libnautilus-private/nautilus-open-with-dialog.[ch]:
	Moved these from eel and renamed
	
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Use the nautilus version imported above instead of the eel one.

2007-10-01  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-signaller.c:
	Replace gnome-vfs mime monitor with NautilusSignaller signal.
	
        * src/nautilus-query-editor.c:
	Use gio to list all mime types

2007-10-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-theme.[ch]:
	Delete leftover files

2007-09-28  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Update for new gio pkgconfig name

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to the new name for g_format_file_size_for_display

2007-09-28  Alexander Larsson  <alexl@redhat.com>
