@@ -1,5 +1,12 @@
 2007-10-02  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-icon-factory.c:
+	Don't clear thumbnails and other absolute pathnames from icon
+	cache when mime data or icon theme changes. This is to avoid
+	flashing and async realoading of all thumbnails.
+
+2007-10-02  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-directory-async.c:
         (mime_db_changed_callback):
 	Use the right call to invalidate attributes, so that
